--- a/Styles/responsive/portrait.css
+++ b/Styles/responsive/portrait.css
@@ -442,3 +442,25 @@ footer
 	width: 100%;
 	height: auto;
 }
+
+/* video */
+
+.video
+{
+	display: flex;
+	flex-direction: column;
+	height: auto;
+	width: 100%;
+	background-color: black;
+}
+.video iframe
+{
+	height: 90%;
+	padding: 2vh;
+}
+.video p
+{
+	width: 90%;
+	padding: 2vh;
+	color: white;
+}
